# glsl-hud-display

./: CMakeLists.txt  LICENSE  Makefile  README.md
shaders/osd/: osd.frag  osd.vert
src/: main.cpp
ui/: Main.qml
ui/overlays/: OSDOverlay.qml
